<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:orientation="vertical"
        android:layoutAnimation="@anim/anim_layout">


        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button1"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button2"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button3"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button4"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button5"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button6"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button7"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button8"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button9"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button10"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button11"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button12"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button13"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button14"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0AC39E"
            android:text="@string/button15"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>
</ScrollView>
